# cpu_emulator_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  arch.h  command.h  parser.h  stack.h
lib/: CMakeLists.txt  stack.h
src/: CMakeLists.txt  arch.cpp  command.cpp  parser.cpp  test.cpp
test/: CMakeLists.txt  fib.agil  main.cpp  test.cpp
test/programs/: add.agil  div.agil  in_out_reg.agil  sub.agil
